--- a/index.html
+++ b/index.html
@@ -126,14 +126,18 @@
                     <aside class="notes">                        
                         <p>
                             When you start out, you usually learn the basics: 
-
+                        </p>
+                        
+                        <p>
                             1. Maybe you learn how to Hello World. 
                             2. Variables
                             3. Control Structures (IF, while, etc)
                             4. Data Structures (Array, struct, collection, etc)
-
+                        </p>
+                        <p>
                             And often, this is a imperative/procedural language. But to some degree, these are considered bad practices as you advance. So I think you have to break these habits in order to improve. Think of If, If If, Else, If, Foreach, If, Else, Else.....This is considered bad code, but it's one of the first things you learn basically.
-
+                        </p>
+                        <p>
                             So learn them, because they have their place, but be aware that they may not be the best approach.                            
                         </p>
                     </aside>
@@ -141,18 +145,18 @@
                 <section>
                     <h1>Mentality</h1>
                     <aside class="notes">
-                        This is a difficult one, To some degree I think what separates a new dev from an experienced dev is a bit of mentality. Experienced devs know they can figure things out, new devs struggle with knowing enough. Imposter syndrome is a big issue, because people don't want to look dumb. But working on a system that has been built over years, and you are just walking in...the fact that you may not know something is really an indication of poor documentation than your ability.
+                        <p>This is a difficult one, To some degree I think what separates a new dev from an experienced dev is a bit of mentality. Experienced devs know they can figure things out, new devs struggle with knowing enough. Imposter syndrome is a big issue, because people don't want to look dumb. But working on a system that has been built over years, and you are just walking in...the fact that you may not know something is really an indication of poor documentation than your ability.</p>
 
-To some degree it's confidence, but I think some of it is staying power.
+<p>To some degree it's confidence, but I think some of it is staying power.</p>
                     </aside>
                 </section>
                 <section>
                     <h1>Read Source Code</h1>
 
                     <aside class="notes">
-                        Another great way to learn is to read existing source code. Github is an amazing resource where you can access code written by all kinds of programmers. You should seek out people who have a reputation for good code, and then go read theirs.
+                        <p>Another great way to learn is to read existing source code. Github is an amazing resource where you can access code written by all kinds of programmers. You should seek out people who have a reputation for good code, and then go read theirs.</p>
 
-                        What you can gain here, is you can see how people structure their code, or maybe a trick...keep in mind not all code is great, but in reading many people's code, you can develop a sense of what is good/bad/acceptable and this affects the way you code things.
+                        <p>What you can gain here, is you can see how people structure their code, or maybe a trick...keep in mind not all code is great, but in reading many people's code, you can develop a sense of what is good/bad/acceptable and this affects the way you code things.</p>
                     </aside>
                 </section>
             </div>
