--- a/index.html
+++ b/index.html
@@ -129,10 +129,20 @@
                         </p>
                         
                         <p>
-                            1. Maybe you learn how to Hello World. 
-                            2. Variables
-                            3. Control Structures (IF, while, etc)
-                            4. Data Structures (Array, struct, collection, etc)
+                            <ol>
+                                <li>
+                                    Maybe you learn how to Hello World. 
+                                </li>
+                                <li>
+                                    Variables
+                                </li>
+                                <li>
+                                    Control Structures (IF, while, etc)
+                                </li>
+                                <li>
+                                    Data Structures (Array, struct, collection, etc)
+                                </li>
+                            </ol>
                         </p>
                         <p>
                             And often, this is a imperative/procedural language. But to some degree, these are considered bad practices as you advance. So I think you have to break these habits in order to improve. Think of If, If If, Else, If, Foreach, If, Else, Else.....This is considered bad code, but it's one of the first things you learn basically.
