--- a/index.html
+++ b/index.html
@@ -169,6 +169,58 @@
                         <p>What you can gain here, is you can see how people structure their code, or maybe a trick...keep in mind not all code is great, but in reading many people's code, you can develop a sense of what is good/bad/acceptable and this affects the way you code things.</p>
                     </aside>
                 </section>
+                <section>
+                    <h1>It's not all about code</h1>
+
+                    <aside class="notes">
+                        <p>
+                        Know that being a dev isnt all about code, it's about what that code provides that really provides value.
+                        </p>
+                        <p>
+                        </p>
+                        <ul>
+                            <li>
+                                Solves Business Problems (usually with code)
+                                <ul>
+                                    <li>
+                                    Automates things
+                                        
+                                    </li>
+                                    <li>
+                                        Save time
+                                        
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                Increases efficiency
+                                <ul>
+                                    <li>
+                                        Save time
+                                    </li>
+                                    <li>
+                                        faster turn-around
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                Simplifies process
+                                <ul>
+                                    <li>
+                                        save time
+                                    </li>
+                                    <li>
+                                        more effective
+                                    </li>
+                                    <li>
+                                        less steps
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                        </p>
+                    </aside>
+                </section>
             </div>
         </div>
 
