--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
                     <p>
                         <small>Created by <a href="http://andrewhuggins.com">Andy Huggins</a></small>
                     </p>
+                    <aside class="notes">
+                        <p>In my own career as a coder/programmer/developer I remember starting out, and some things being really difficult. I would see people online, follow screencasts and wonder "These people had to start learning similar to what I learned starting out...how is it they seem to know so much more?"</p>
+
+                        <p>That question never really got answered, but as I approach my 10th year doing code, I find that I somehow just know stuff. Or maybe not that I know it, but I seem to just be able to run with something new much faster than I used to.</p>
+
+                        <p>So the rest of this talk is sort of my theory as to why that is, which I hope might provide some pointers for others.</p>
+
+                        <p>Also, Code God is kind of a joke, I think most people have to put in time to learn things, and there are a few, very rare, who just pick up these details early and fast.</p>
+                    </aside>
                 </section>
                 <section>
                     <p>
@@ -45,6 +54,11 @@
                 </section>
                 <section>
                     <h1>Deep Knowledge</h1>
+                    <aside class="notes">
+                        <p>Looking back, I know that I have a deeper understanding of how code works. And that comes with time, but also comes with wrestling with code in your mind. Copy and Pasting from Stack Overflow is ok, but I think to really get better, you need to understand why that code solves the problem. Wrestling with why it solves the problem, is how you gain deeper understanding of code in general.</p>
+
+<p>This is the first tip, while looking for the cause of an error, don't just copy/paste and see if it fixes the error. Take a little time to think about what the copied code is doing, why it is doing it. It's not to say you can never copy/paste code, but to gain that experience, you need to understand the fix.</p>
+                    </aside>
                 </section>
                 <section>
                     <section id="fragments">
@@ -154,10 +168,15 @@
                 </section>
                 <section>
                     <h1>Mentality</h1>
+                    <p class="fragment">
+                        Confidence
+                    </p>
+                    <p class="fragment">
+                        Staying Power
+                    </p>
+
                     <aside class="notes">
                         <p>This is a difficult one, To some degree I think what separates a new dev from an experienced dev is a bit of mentality. Experienced devs know they can figure things out, new devs struggle with knowing enough. Imposter syndrome is a big issue, because people don't want to look dumb. But working on a system that has been built over years, and you are just walking in...the fact that you may not know something is really an indication of poor documentation than your ability.</p>
-
-<p>To some degree it's confidence, but I think some of it is staying power.</p>
                     </aside>
                 </section>
                 <section>
@@ -171,7 +190,15 @@
                 </section>
                 <section>
                     <h1>It's not all about code</h1>
-
+                    <p class="fragment">
+                        Automates
+                    </p>
+                    <p class="fragment">
+                        Increase Efficiency
+                    </p>
+                    <p class="fragment">
+                        Simplifies Process
+                    </p>
                     <aside class="notes">
                         <p>
                         Know that being a dev isnt all about code, it's about what that code provides that really provides value.
