last minute add slide

--- a/index.html
+++ b/index.html
@@ -135,6 +135,33 @@
                     </aside>
                 </section>
                 <section>
+                    <h1>Plan then code</h1>
+                    <p>
+                        "Design what you want to build, then implement it later."
+                    </p>
+
+                    <aside class="notes">
+                        <p>
+                            Get in the practice of planning your code, not just writing it. Often you will fall back to what you know, instead of pushing yourself to do what you need.
+                        </p>
+                        <p>
+                            Plan how you want your system to interact with this piece of code.
+                        </p>
+                        <p>
+                            Wishful thinking.
+                        </p>
+                    </aside>
+                </section>
+                <section>
+                    <h1>Working != Quality</h1>
+                    <p class="fragment">
+                        "Maintainability"
+                    </p>
+                    <aside class="notes">
+                        Working code does not mean it is quality. Quality is about the ease in which you can make changes. Some say "Maintainability"
+                    </aside>
+                </section>
+                <section>
                     <h1>Break Habits</h1>
                     <p>"Everything looks like a nail, when all you have is a hammer"</p>
                     <aside class="notes">                        
@@ -173,6 +200,9 @@
                     </p>
                     <p class="fragment">
                         Staying Power
+                    </p>
+                    <p class="fragment">
+                        Tenacious
                     </p>
 
                     <aside class="notes">
